# nanoGPT-repro

./: main.py  pyproject.toml
nanogpt_repro/: config.py  model.py  train.py
nanogpt_repro/data/: dataloader.py
tests/: test_nanogpt_repro.py
