[tool.poetry]
name = "nanoGPT-repro"
version = "0.1.0"
description = ""
authors = ["FabienNiel <fabien.niel@hotmail.fr>"]

[tool.poetry.dependencies]
python = ">=3.11"
torch = "2.2.2"
tiktoken = "^0.9.0"
transformers = "^4.53.3"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
